# biss-analyzer

./: CMakeLists.txt  README.md  azure-pipelines.yml
src/: BISSAnalyzer.cpp  BISSAnalyzer.h  BISSAnalyzerResults.cpp  BISSAnalyzerResults.h  BISSAnalyzerSettings.cpp  BISSAnalyzerSettings.h  BISSSimulationDataGenerator.cpp  BISSSimulationDataGenerator.h
